# plover-mac-ui

./: README.md  setup.cfg
plover_cocoa/: DictionaryManager.xib  MainMenu.xib  Preferences.xib  PreonicLayoutDisplay.xib  StenographLayoutDisplay.xib  StenotypeLayoutDisplay.xib  Suggestions.xib  ZenLayoutDisplay.xib  app_delegate.py  colors.py  commands.py  dict_manager.py  fonts.py  layout_display.py  layout_display_controllers.py  layout_display_views.py  layout_model.py  lookup.py  lookup_format.py  lookup_model.py  lookup_translation_list.py  lookup_word_list.py  main.py  make_nibs.sh  paper_tape.py  preferences.py  resources.py  steno_layout.py  suggestions.py  tool.py
plover_cocoa/Resources/: LayoutDisplay.nib  Lookup.nib  PaperTape.nib  Preferences.nib  Suggestions.nib  TranslationListItem.nib  UniLayoutDisplay.nib  ZenLayoutDisplay.nib
plover_mac_ui/: LayoutDisplay.xib  Lookup.xib  PaperTape.xib  QwertyLayoutDisplay.xib  SplitoLayoutDisplay.xib  TranslationListItem.xib  UniLayoutDisplay.xib  WordListItem.xib  app_delegate.py  async_utils.py  dict_manager.py  engine.py  layout_display.py  layout_display_controllers.py  layout_display_views.py  layout_model.py  lookup.py  lookup_format.py  lookup_model.py  lookup_translation_list.py  lookup_word_list.py  main.py  paper_tape.py  preferences.py  steno.py  suggestions.py  systems.py  tool.py  utils.py
plover_mac_ui/Resources/: DictionaryManager.nib  MainMenu.nib  PreonicLayoutDisplay.nib  QwertyLayoutDisplay.nib  SplitoLayoutDisplay.nib  StenographLayoutDisplay.nib  StenotypeLayoutDisplay.nib  WordListItem.nib
