[metadata]
name = plover_cocoa
keywords = plover plover_plugin

[options]
zip_safe = True
setup_requires =
	setuptools>=30.3.0
install_requires =
	plover>=4.0.0.dev8
  pyobjc-core>=7.3
  pyobjc-framework-Cocoa>=7.3
  pyobjc-framework-Quartz>=7.3
  pyobjc-framework-libdispatch>=7.3
packages =
	plover_cocoa

[options.entry_points]
plover.gui =
  cocoa = plover_cocoa.main
plover.gui.cocoa.tool =
  tool0_lookup = plover_cocoa.lookup:LookupToolController
  ; tool1_dict_manager = plover_cocoa.dict_manager:DictionaryManagerController
  tool2_paper_tape = plover_cocoa.paper_tape:PaperTapeController
  tool3_layout_display = plover_cocoa.layout_display:LayoutDisplayController
  ; tool4_suggestions = plover_cocoa.suggestions:SuggestionsToolController
plover.command =
  paper_tape = plover_cocoa.commands:open_paper_tape
  layout_display = plover_cocoa.commands:open_layout_display
