[metadata]
name = plover_mac_ui
keywords = plover plover_plugin

[options]
zip_safe = True
setup_requires =
	setuptools>=30.3.0
install_requires =
	plover>=4.0.0.dev8
  pyobjc-core>=7.3
  pyobjc-framework-Cocoa>=7.3
  pyobjc-framework-Quartz>=7.3
  pyobjc-framework-libdispatch>=7.3
packages =
	plover_mac_ui

[options.entry_points]
plover.gui =
  mac = plover_mac_ui.main
plover.gui.mac.tool =
  tool0_lookup = plover_mac_ui.lookup:LookupToolController
  ; tool1_dict_manager = plover_mac_ui.dict_manager:DictionaryManagerController
  tool2_paper_tape = plover_mac_ui.paper_tape:PaperTapeController
  tool3_layout_display = plover_mac_ui.layout_display:LayoutDisplayController
  ; tool4_suggestions = plover_mac_ui.suggestions:SuggestionsToolController
plover.command =
  paper_tape = plover_mac_ui.commands:open_paper_tape
  layout_display = plover_mac_ui.commands:open_layout_display
